# ricksponse

./: Cargo.toml  README.md
src/: error.rs  hateoas.rs  helper.rs  lib.rs
src/entity/: mod.rs  payload_body.rs  payload_error.rs  payload_future.rs  response.rs
src/entity/hateoas/: mod.rs
src/entity/ricksponse/: mod.rs  payload_error.rs  ricksponse.rs  ricksponse_body.rs  ricksponse_extract_fut.rs
src/helpers/: mod.rs
src/helpers/option/: mod.rs
